# netcode

./: .gitignore  CMakeLists.txt  CMakeSDK.sample.txt  CMakeSettings.json  Default.props  EggApp.props  EggDll.props  EggLib.props  GraphGame.sln  LICENSE  Netcode.sln  NetcodeApp.props  README.md  ReleaseConfig.props  SDK.props  SDK.sample.props  launch.sample.vs.json
Netcode/: AnimationBlender.cpp  AnimationBlender.h  AnimationState.cpp  AnimationState.h  BasicGeometry.cpp  BasicGeometry.h  BinaryReader.cpp  BinaryReader.h  Blackboard.cpp  Blackboard.h  BulkAllocator.hpp  BulkVector.hpp  CMakeLists.txt  Common.cpp  Common.h  Config.cpp  Config.h  ConfigBase.h  ConsoleModule.cpp  ConsoleModule.h  DebugPhysx.h  DebugPhysxActor.cpp  DebugPhysxActor.h  DebugPhysxRaycast.h  DefaultModuleFactory.cpp  DefaultModuleFactory.h  DestructiveCopyConstructible.hpp  EggMath.cpp  Event.hpp  FancyIterators.hpp  File.h  Functions.cpp  Functions.h  GramSchmidt.cpp  GramSchmidt.h  HandleDecl.h  HandleTypes.cpp  HandleTypes.h  Input.cpp  Input.h  (+35 more)
Netcode/Animation/: Blackboard.cpp  Blackboard.h  Blender.cpp  Blender.h  BoneTransform.h  CMakeLists.txt  IK.cpp  IK.h  State.cpp  State.h  StateGroup.cpp  StateGroup.h  Transition.cpp  Transition.h
Netcode/Graphics/: BorderDesc.cpp  BorderDesc.h  CMakeLists.txt  Config.h  FrameGraph.cpp  FrameGraph.h  GraphicsConfig.h  GraphicsContexts.h  Material.cpp  Material.h  ResourceDesc.h  ResourceEnums.cpp  ResourceEnums.h  SpriteDesc.cpp  SpriteDesc.h  UploadBatch.cpp  UploadBatch.h
Netcode/IO/: BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  CMakeLists.txt  Config.h  Directory.cpp  Directory.h  File.cpp  File.h  Json.cpp  Json.h  Path.cpp  Path.h
Netcode/Input/: AxisMap.hpp  AxisMapBase.h  DefaultAxes.h  Key.h
Netcode/Network/: BasicPacket.hpp  CMakeLists.txt  ClientSession.cpp  ClientSession.h  CompletionToken.h  Config.h  Connection.cpp  Connection.h  Cookie.cpp  Cookie.h  Dtls.cpp  Dtls.h  FragmentStorage.cpp  FragmentStorage.h  GameSession.cpp  GameSession.h  HttpSession.cpp  HttpSession.h  Macros.h  MatchmakerSession.cpp  MatchmakerSession.h  MtuValue.hpp  MysqlSession.cpp  MysqlSession.h  NetAllocator.h  NetcodeNetworkModule.cpp  NetcodeNetworkModule.h  NetworkCommon.cpp  NetworkCommon.h  NetworkDecl.h  NetworkErrorCode.h  ReplicationContext.cpp  ReplicationContext.h  Response.hpp  ServerSession.cpp  ServerSession.h  Service.cpp  Service.h  Socket.hpp  SslUtil.cpp  (+1 more)
Netcode/Shaders/: CMakeLists.txt  CompileShaders.cmd  DebugPhysxVS.hlsl  Lighting.hlsli  Netcode_DebugPrimVS.hlsl  Netcode_SpritePS.hlsl  Netcode_SpriteVS.hlsl
Netcode/Sync/: CMakeLists.txt  LockGuards.hpp  (+2 more)
NetcodeAssetCompiler/: CMakeLists.txt  NetcodeAssetCompiler.vcxproj  main.cpp
NetcodeAssetEditor/: AnimationsPage.cpp  AnimationsPage.h  AnimationsPage.xaml  App.cpp  App.h  App.idl  App.xaml  BonesPage.cpp  BonesPage.h  BonesPage.idl  BonesPage.xaml  BoundingBoxHelpers.cpp  BoundingBoxHelpers.h  CMakeLists.txt  ColliderTypeConverter.cpp  ColliderTypeConverter.h  ColliderTypeVisibilityConverter.cpp  ColliderTypeVisibilityConverter.h  CollidersPage.cpp  CollidersPage.h  CollidersPage.xaml  ConstantBufferTypes.h  CreateColliderDialog.cpp  CreateColliderDialog.h  CreateColliderDialog.xaml  DC_Animation.cpp  DC_Animation.h  DC_Bone.cpp  DC_Bone.h  DC_Collider.cpp  DC_Collider.h  DC_GeometryPage.cpp  DC_GeometryPage.h  DC_Lod.cpp  DC_Lod.h  DC_MainPage.cpp  DC_MainPage.h  DC_Material.cpp  DC_Material.h  DC_Mesh.cpp  (+77 more)
NetcodeAssetLib/: Animation.h  AssetExporter.cpp  AssetExporter.h  Bone.h  BoundingBoxHelpers.cpp  CMakeLists.txt  Collider.h  Exporter.cpp  Exporter.h  FBXImporter.cpp  FBXImporter.h  Importer.cpp  Importer.h  IntermediateModel.cpp  IntermediateModel.h  JsonUtility.cpp  JsonUtility.h  Manifest.cpp  Manifest.h  Material.cpp  Material.h  MaterialConverter.cpp  MaterialConverter.h  Mesh.h  Model.cpp  Model.h  NetcodeAssetLib.vcxproj  NetcodeAssetLib.vcxproj.filters
NetcodeClient/: AnimationController.cpp  AnimationController.h  AnimationSet.cpp  AnimationSet.h  Asset.h  AssetManager.h  CMakeLists.txt  ComponentStorage.hpp  Components.cpp  Components.h  ConstantBufferTypes.h  DebugScript.h  DevCameraScript.cpp  DevCameraScript.h  EggApp.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  GraphicsEngine.cpp  GraphicsEngine.h  GunScript.h  Layer.h  Light.h  Material.h  Mesh.h  NetcodeApp.cpp  NetcodeApp.h  NetcodeClient.natvis  NetcodeClient.vcxproj  NetcodeClient.vcxproj.filters  PhysxHelpers.cpp  PhysxHelpers.h  PlayerBehavior.h  ProgramOptions.cpp  ProgramOptions.h  RemoteAvatarScript.h  Scene.h  Services.cpp  Services.h  (+16 more)
NetcodeFoundation/: .gitignore  ArrayView.hpp  BuildNumberDateCache.txt  CMakeLists.txt  Enum.hpp  ErrorCode.cpp  ErrorCode.h  Exceptions.cpp  Exceptions.h  Formats.h  Foundation.h  Json.cpp  Json.h  Macros.h  Math.cpp  Math.h  Memory.h  MemoryFunctions.cpp  MemoryFunctions.h  NetcodeFoundation.vcxproj  NetcodeFoundation.vcxproj.filters  Platform.h  Sal.h  Uri.cpp  Uri.h  UriBase.cpp  UriBase.h  Version.h  Version.in.cpp  increment_version.cmake
NetcodeLib/: AField.cpp  AField.h  BReport.cpp  BReport.h  CMakeLists.txt  ClientReport.cpp  ClientReport.h  Config.cpp  Config.h  Cookie.cpp  Cookie.h  Endpoint.cpp  Endpoint.h  Field.hpp  Formatter.cpp  Formatter.h  GameServer.cpp  GameServer.h  IOEngine.cpp  IOEngine.h  Model.cpp  Model.h  ModelInterfaces.cpp  ModelInterfaces.h  Mysql.cpp  Mysql.h  NetcodeLib.vcxproj  NetcodeLib.vcxproj.filters  NetworkStream.cpp  NetworkStream.h  NullableField.hpp  ServerReport.cpp  ServerReport.h  Session.cpp  Session.h  Sleep.cpp  Sleep.h  StreamInterfaces.h  StreamMessage.cpp  StreamMessage.h  (+17 more)
NetcodeProtocol/: CMakeLists.txt  NetcodeProtocol.vcxproj  NetcodeProtocol.vcxproj.filters  client.proto  control.proto  header.proto  netcode.proto  server.proto  shared.proto
NetcodeServer/: CMakeLists.txt  ProgramOptions.cpp  ProgramOptions.h  RpcServer.cpp  RpcServer.h  RpcService.cpp  RpcService.h  ServerApp.cpp  ServerApp.h  config.cfg  config.json  main.cpp
NetcodeUnitTests/: CMakeLists.txt  main.cpp
(+1065 files in other folders)
